FEAT: Added doctor fixture gen